--- a/app/views/spree/orders/populate.js.erb
+++ b/app/views/spree/orders/populate.js.erb
@@ -3,7 +3,7 @@
 $("#link-to-cart a").replaceWith('<%= escape_javascript link_to_cart %>')
 
 // Refresh minicart line items
-$("#minicart").replaceWith('<%= escape_javascript render("spree/shared/minicart") %>')
+$("#minicart").replaceWith('<%= escape_javascript render("spree/shared/minicart", format: "html") %>')
 
 // Sliding down minicart
 $("#link-to-cart #minicart").slideDown()
